force-app/main/default/objects/Service__c/fields/Ability_to_post_non_functional_or_broken__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_post_non_functional_or_broken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ability to post non functional or broken</label>
    <type>Checkbox</type>
</CustomField>