force-app/main/default/objects/Service__c/fields/Able_to_post_large_lots_over_50_pcs__c.field-meta.xml
<CustomField>
    <fullName>Able_to_post_large_lots_over_50_pcs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Able to post large lots (over 50 pcs)</label>
    <type>Checkbox</type>
</CustomField>