force-app/main/default/objects/Service__c/fields/Able_to_repair__c.field-meta.xml
<CustomField>
    <fullName>Able_to_repair__c</fullName>
    <label>Able to repair</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>