force-app/main/default/objects/Service__c/fields/All_Countries__c.field-meta.xml
<CustomField>
    <fullName>All_Countries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Countries</label>
    <type>Checkbox</type>
</CustomField>