force-app/main/default/objects/Service__c/fields/Austria__c.field-meta.xml
<CustomField>
    <fullName>Austria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Austria</label>
    <type>Checkbox</type>
</CustomField>