force-app/main/default/objects/Service__c/fields/Average_purchase_value__c.field-meta.xml
<CustomField>
    <fullName>Average_purchase_value__c</fullName>
    <label>Average purchase value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-500€</fullName>
            </value>
            <value>
                <fullName>500€-1,000€</fullName>
            </value>
            <value>
                <fullName>+1,000€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>