force-app/main/default/objects/Service__c/fields/B2B_Pricing__c.field-meta.xml
<CustomField>
    <fullName>B2B_Pricing__c</fullName>
    <label>B2B Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good margin potential</fullName>
            </value>
            <value>
                <fullName>Medium margin potential</fullName>
            </value>
            <value>
                <fullName>Poor margin potential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>