force-app/main/default/objects/Service__c/fields/B2B_Seller_Only__c.field-meta.xml
<CustomField>
    <fullName>B2B_Seller_Only__c</fullName>
    <label>B2B Seller Only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>