force-app/main/default/objects/Service__c/fields/Belgium__c.field-meta.xml
<CustomField>
    <fullName>Belgium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Belgium</label>
    <type>Checkbox</type>
</CustomField>