force-app/main/default/objects/Service__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer</label>
    <type>Checkbox</type>
</CustomField>