force-app/main/default/objects/Service__c/fields/Canada__c.field-meta.xml
<CustomField>
    <fullName>Canada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canada</label>
    <type>Checkbox</type>
</CustomField>