force-app/main/default/objects/Service__c/fields/Carrier_Greece__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Greece__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>Carrier Greece</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carrier</valueSetName>
    </valueSet>
</CustomField>