force-app/main/default/objects/Service__c/fields/Carrier_Slovakia__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Slovakia__c</fullName>
    <label>Carrier Slovakia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carrier</valueSetName>
    </valueSet>
</CustomField>