force-app/main/default/objects/Service__c/fields/Category_Buy__c.field-meta.xml
<CustomField>
    <fullName>Category_Buy__c</fullName>
    <label>Category (Buy)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Airpods</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>DE Packaging</fullName>
            </value>
            <value>
                <fullName>Gaming consoles</fullName>
            </value>
            <value>
                <fullName>Kitchen appliances</fullName>
            </value>
            <value>
                <fullName>Laptops</fullName>
            </value>
            <value>
                <fullName>Macbook</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Screens</fullName>
            </value>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Smartphone DE</fullName>
            </value>
            <value>
                <fullName>Smartphone EU</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Other Components</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PC / Macbook</fullName>
                <isActive>false</isActive>
                <label>PC / Macbook</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>