force-app/main/default/objects/Service__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Feel free to put additional information</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>