force-app/main/default/objects/Service__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <inlineHelpText>Specific to the given service.</inlineHelpText>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>