force-app/main/default/objects/Service__c/fields/Date_of_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Deactivation__c</fullName>
    <label>Date of Deactivation</label>
    <type>Date</type>
</CustomField>