force-app/main/default/objects/Service__c/fields/Days_in_Current_Status_Seller__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Status_Seller__c</fullName>
    <formula>TODAY()- Last_Seller_Status_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Current Status - Seller</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>