force-app/main/default/objects/Service__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <label>EIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>