force-app/main/default/objects/Service__c/fields/EORI_EU_Only__c.field-meta.xml
<CustomField>
    <fullName>EORI_EU_Only__c</fullName>
    <label>EORI (EU Only)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>