force-app/main/default/objects/Service__c/fields/France__c.field-meta.xml
<CustomField>
    <fullName>France__c</fullName>
    <defaultValue>false</defaultValue>
    <label>France</label>
    <type>Checkbox</type>
</CustomField>