force-app/main/default/objects/Service__c/fields/Greece__c.field-meta.xml
<CustomField>
    <fullName>Greece__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Greece</label>
    <type>Checkbox</type>
</CustomField>