force-app/main/default/objects/Service__c/fields/Has_a_SiS__c.field-meta.xml
<CustomField>
    <fullName>Has_a_SiS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has a SiS</label>
    <type>Checkbox</type>
</CustomField>