force-app/main/default/objects/Service__c/fields/Ireland__c.field-meta.xml
<CustomField>
    <fullName>Ireland__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ireland</label>
    <type>Checkbox</type>
</CustomField>