force-app/main/default/objects/Service__c/fields/Italy__c.field-meta.xml
<CustomField>
    <fullName>Italy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Italy</label>
    <type>Checkbox</type>
</CustomField>