force-app/main/default/objects/Service__c/fields/Last_Buyer_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Buyer_Status_Change_Date__c</fullName>
    <label>Last Buyer Status Change Date</label>
    <type>Date</type>
</CustomField>