force-app/main/default/objects/Service__c/fields/Last_Seller_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Seller_Status_Change_Date__c</fullName>
    <label>Last Seller Status Change Date</label>
    <type>Date</type>
</CustomField>