force-app/main/default/objects/Service__c/fields/Mana_Grading_Scale__c.field-meta.xml
<CustomField>
    <fullName>Mana_Grading_Scale__c</fullName>
    <label>Mana Grading Scale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>