force-app/main/default/objects/Service__c/fields/Mana_Only__c.field-meta.xml
<CustomField>
    <fullName>Mana_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mana Only</label>
    <type>Checkbox</type>
</CustomField>