force-app/main/default/objects/Service__c/fields/Mana_PK__c.field-meta.xml
<CustomField>
    <fullName>Mana_PK__c</fullName>
    <label>Mana PK</label>
    <length>18</length>
    <type>Text</type>
</CustomField>