force-app/main/default/objects/Service__c/fields/Mana_Seller_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Mana_Seller_Onboarding_Status__c</fullName>
    <label>Mana - Seller Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Active Discussion</fullName>
            </value>
            <value>
                <fullName>Registration Sent</fullName>
            </value>
            <value>
                <fullName>Registration Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>First Inventory Received</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Registration Incomplete</fullName>
            </value>
            <value>
                <fullName>Revisit</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>