force-app/main/default/objects/Service__c/fields/Merchant_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Record_Type__c</fullName>
    <formula>Business_Name__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Record Type</label>
    <type>Text</type>
</CustomField>