force-app/main/default/objects/Service__c/fields/Netherlands__c.field-meta.xml
<CustomField>
    <fullName>Netherlands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Netherlands</label>
    <type>Checkbox</type>
</CustomField>