force-app/main/default/objects/Service__c/fields/Portugal__c.field-meta.xml
<CustomField>
    <fullName>Portugal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portugal</label>
    <type>Checkbox</type>
</CustomField>