force-app/main/default/objects/Service__c/fields/Quantity_sold_after_1_month__c.field-meta.xml
<CustomField>
    <fullName>Quantity_sold_after_1_month__c</fullName>
    <label>Quantity sold after 1 month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>