force-app/main/default/objects/Service__c/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>Return Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>