force-app/main/default/objects/Service__c/fields/RTC_Exemption_Expiration__c.field-meta.xml
<CustomField>
    <fullName>RTC_Exemption_Expiration__c</fullName>
    <label>RTC/Exemption Expiration</label>
    <type>Date</type>
</CustomField>