force-app/main/default/objects/Service__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seller</label>
    <type>Checkbox</type>
</CustomField>