force-app/main/default/objects/Service__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ingram</fullName>
            </value>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>Reconext</fullName>
            </value>
            <value>
                <fullName>CEAT</fullName>
            </value>
            <value>
                <fullName>Cordon</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
            <value>
                <fullName>Aucnet</fullName>
            </value>
            <value>
                <fullName>Committed Agency</fullName>
            </value>
            <value>
                <fullName>CTDI</fullName>
            </value>
            <value>
                <fullName>Cibox</fullName>
            </value>
            <value>
                <fullName>Alchemy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>