force-app/main/default/objects/Service__c/fields/Slovakia__c.field-meta.xml
<CustomField>
    <fullName>Slovakia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slovakia</label>
    <type>Checkbox</type>
</CustomField>