force-app/main/default/objects/Service__c/fields/Spain__c.field-meta.xml
<CustomField>
    <fullName>Spain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spain</label>
    <type>Checkbox</type>
</CustomField>