force-app/main/default/objects/Service__c/fields/SST_Prio__c.field-meta.xml
<CustomField>
    <fullName>SST_Prio__c</fullName>
    <businessOwnerUser>clement.vannicatte@backmarket.com</businessOwnerUser>
    <label>SST Prio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q4 2021</fullName>
            </value>
            <value>
                <fullName>Q12022</fullName>
            </value>
            <value>
                <fullName>Q2 2022</fullName>
            </value>
            <value>
                <fullName>Q3 2022</fullName>
            </value>
            <value>
                <fullName>Q4 2022</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>