force-app/main/default/objects/Service__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Contract signed</fullName>
                <label>Contract Signed</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>First Stock Received</fullName>
                <isActive>false</isActive>
                <label>First Stock Received</label>
            </value>
            <value>
                <fullName>Onboarded</fullName>
                <isActive>false</isActive>
                <label>Onboarded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>