force-app/main/default/objects/Service__c/fields/State_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>State_of_Incorporation__c</fullName>
    <inlineHelpText>US Only</inlineHelpText>
    <label>State of Incorporation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>