force-app/main/default/objects/Service__c/fields/Sweden__c.field-meta.xml
<CustomField>
    <fullName>Sweden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sweden</label>
    <type>Checkbox</type>
</CustomField>