force-app/main/default/objects/Service__c/fields/TECH_PK__c.field-meta.xml
<CustomField>
    <fullName>TECH_PK__c</fullName>
    <label>TECH_PK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>