force-app/main/default/objects/Service__c/fields/TECH_Trigger_Back_Ship_Update__c.field-meta.xml
<CustomField>
    <fullName>TECH_Trigger_Back_Ship_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Trigger Back Ship Update</label>
    <type>Checkbox</type>
</CustomField>