force-app/main/default/objects/Service__c/fields/Total_Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Sales__c</fullName>
    <label>Total Annual Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - $1M</fullName>
            </value>
            <value>
                <fullName>$1M - $5M</fullName>
            </value>
            <value>
                <fullName>$5M - $10M</fullName>
            </value>
            <value>
                <fullName>$10M - $20M</fullName>
            </value>
            <value>
                <fullName>$20M - $50M</fullName>
            </value>
            <value>
                <fullName>$50M - $100M</fullName>
            </value>
            <value>
                <fullName>$100M +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>