force-app/main/default/objects/Service__c/fields/United_Kingdom__c.field-meta.xml
<CustomField>
    <fullName>United_Kingdom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>United Kingdom</label>
    <type>Checkbox</type>
</CustomField>