force-app/main/default/objects/Service__c/fields/United_States__c.field-meta.xml
<CustomField>
    <fullName>United_States__c</fullName>
    <defaultValue>false</defaultValue>
    <label>United States</label>
    <type>Checkbox</type>
</CustomField>