force-app/main/default/objects/Service__c/fields/VAT_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Type__c</fullName>
    <formula>TEXT( Business_Name__r.VAT_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Type</label>
    <type>Text</type>
</CustomField>