force-app/main/default/objects/Service__c/fields/View_Details__c.field-meta.xml
<CustomField>
    <fullName>View_Details__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, RecordType.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Details</label>
    <type>Text</type>
</CustomField>